Kubernetes/Mock Exam/pod.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: fast-pvc-cka
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 30Mi
  storageClassName: fast-storage
controlplane $ cat pod.yaml 
apiVersion: v1
kind: Pod
metadata:
  name: fast-pod-cka
spec:
  containers:
    - name: myfrontend
      image: nginx:latest
      volumeMounts:
      - mountPath: "/app/data"
        name: fast-mount
  volumes:
    - name: fast-mount
      persistentVolumeClaim:
        claimName: fast-pvc-cka
